--- a/profile.html
+++ b/profile.html
@@ -4,108 +4,269 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Profile | Valiant Vision</title>
-
-<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
-
 <style>
-:root {
-  --vv-green: #76b900;
-  --vv-purple: #4300b9;
-  --vv-bg: #f4f4f7;
-  --shadow: 0 10px 30px rgba(0,0,0,.08);
-}
-* { box-sizing: border-box; }
-body {
-  margin: 0;
-  font-family: 'Lora', serif;
-  background: var(--vv-bg);
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  min-height: 100vh;
-  padding: 40px 20px;
-}
-.profile-card {
-  background: #fff;
-  padding: 32px;
-  border-radius: 18px;
-  box-shadow: var(--shadow);
-  max-width: 600px;
-  width: 100%;
-}
-.profile-card h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 1.8rem;
-  color: var(--vv-purple);
-  margin-bottom: 20px;
-  text-align: center;
-}
-.profile-field {
-  margin-bottom: 12px;
-}
-.profile-field strong {
-  color: var(--vv-purple);
-  font-family: 'Montserrat', sans-serif;
-}
-.profile-avatar {
-  display: block;
-  max-width: 150px;
-  max-height: 150px;
-  margin: 0 auto 20px auto;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 3px solid var(--vv-green);
-}
+  :root {
+    --vv-green: #76b900;
+    --vv-purple: #4300b9;
+    --vv-bg: #f4f4f7;
+    --shadow: 0 10px 30px rgba(0,0,0,.08);
+  }
+  *{box-sizing:border-box;}
+  body {
+    margin:0;
+    font-family: 'Lora', serif;
+    background: var(--vv-bg);
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:flex-start;
+    padding:20px;
+  }
+  .profile-card {
+    background:#fff;
+    border-radius:18px;
+    padding:30px;
+    max-width:700px;
+    width:100%;
+    box-shadow:var(--shadow);
+  }
+  .profile-card h1 {
+    font-family:'Montserrat', sans-serif;
+    font-weight:800;
+    color:var(--vv-purple);
+    font-size:2rem;
+    margin-bottom:10px;
+  }
+  .profile-card label {
+    font-family:'Montserrat', sans-serif;
+    font-weight:600;
+    display:block;
+    margin-bottom:4px;
+    color:#333;
+  }
+  .profile-card input,
+  .profile-card textarea {
+    width:100%;
+    padding:10px 12px;
+    margin-bottom:15px;
+    border:1px solid #ddd;
+    border-radius:10px;
+    font-size:1rem;
+  }
+  .profile-card textarea { resize:vertical; min-height:70px;}
+  button {
+    background:linear-gradient(135deg,var(--vv-purple),var(--vv-green));
+    color:#fff;
+    border:none;
+    padding:12px 20px;
+    border-radius:12px;
+    font-size:1rem;
+    font-weight:700;
+    cursor:pointer;
+    width:100%;
+    box-shadow:0 8px 18px rgba(67,0,185,.18);
+    transition: transform 0.1s ease;
+  }
+  button:active { transform:translateY(2px); }
+  .avatar-container {
+    display:flex;
+    justify-content:center;
+    margin-bottom:20px;
+  }
+  .avatar-container img {
+    width:120px;
+    height:120px;
+    border-radius:50%;
+    border:4px solid var(--vv-purple);
+    object-fit:cover;
+  }
+  .badges-container {
+    display:flex;
+    flex-wrap:wrap;
+    gap:12px;
+    margin-top:20px;
+  }
+  .badge-card {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:100px;
+    text-align:center;
+    padding:10px;
+    border-radius:10px;
+    background:#f5f5f5;
+    box-shadow:0 5px 15px rgba(0,0,0,0.08);
+  }
+  .badge-card img {
+    width:50px;
+    height:50px;
+    margin-bottom:6px;
+  }
+  .edit-btn {
+    margin-bottom:20px;
+    background:#4300b9;
+    width:auto;
+    padding:8px 16px;
+  }
 </style>
 </head>
 <body>
 
-<div class="profile-card" id="profileCard">
-  <h1>Your Profile</h1>
-  <img src="" id="avatarImg" class="profile-avatar" style="display:none;">
-  <div id="profileFields"></div>
+<div class="profile-card">
+  <div class="avatar-container">
+    <img id="profileAvatar" src="images/default-avatar.png" alt="Profile Avatar">
+  </div>
+  <button class="edit-btn" id="editProfileBtn">Edit Profile</button>
+  
+  <form id="profileForm">
+    <label>Full Name</label>
+    <input type="text" id="name" required>
+
+    <label>Email</label>
+    <input type="email" id="email" required>
+
+    <label>Phone</label>
+    <input type="tel" id="phone" required>
+
+    <label>State</label>
+    <input type="text" id="state" required>
+
+    <label>Country</label>
+    <input type="text" id="country" required>
+
+    <label>Class</label>
+    <input type="text" id="class" required>
+
+    <label>School</label>
+    <input type="text" id="school" required>
+
+    <label>Skills</label>
+    <textarea id="skills" required></textarea>
+
+    <label>Hobbies</label>
+    <textarea id="hobbies"></textarea>
+
+    <label>Main Achievements</label>
+    <textarea id="achievements"></textarea>
+
+    <label>Profile Picture (optional, Base64)</label>
+    <input type="file" id="avatarUpload" accept="image/*">
+
+    <button type="submit">Save Profile</button>
+  </form>
+
+  <div class="section-title" style="margin-top:20px; font-weight:700; font-size:1.2rem;">My Badges</div>
+  <div class="badges-container" id="badgeSection">
+    <!-- badges appear here -->
+  </div>
 </div>
 
 <script>
-// Check if subscribed
-if(localStorage.getItem("subscribed") !== "true"){
-  alert("⚠️ No subscription found! Redirecting to Subscribe page.");
-  window.location.href = "subscribe.html";
-} else {
-  const data = JSON.parse(localStorage.getItem("userProfile"));
+const profileForm = document.getElementById('profileForm');
+const editBtn = document.getElementById('editProfileBtn');
+const profileAvatar = document.getElementById('profileAvatar');
+const badgeSection = document.getElementById('badgeSection');
+const avatarUpload = document.getElementById('avatarUpload');
 
-  // Avatar
-  if(data.avatar){
-    const avatarImg = document.getElementById("avatarImg");
-    avatarImg.src = data.avatar;
-    avatarImg.style.display = "block";
+// Possible badges
+const allBadges = [
+  {id:'creative_star', title:'Creative Star', img:'images/badge1.png'},
+  {id:'early_learner', title:'Early Learner', img:'images/badge2.png'},
+  {id:'program_master', title:'Program Master', img:'images/badge3.png'},
+  {id:'future_program', title:'Future Program', img:'images/badge4.png'}
+];
+
+// Load user data
+let userProfile = JSON.parse(localStorage.getItem('userProfile') || '{}');
+let userBadges = JSON.parse(localStorage.getItem('userBadges') || '[]');
+
+// Populate form
+function populateForm(){
+  if(Object.keys(userProfile).length){
+    document.getElementById('name').value = userProfile.name || '';
+    document.getElementById('email').value = userProfile.email || '';
+    document.getElementById('phone').value = userProfile.phone || '';
+    document.getElementById('state').value = userProfile.state || '';
+    document.getElementById('country').value = userProfile.country || '';
+    document.getElementById('class').value = userProfile.class || '';
+    document.getElementById('school').value = userProfile.school || '';
+    document.getElementById('skills').value = userProfile.skills || '';
+    document.getElementById('hobbies').value = userProfile.hobbies || '';
+    document.getElementById('achievements').value = userProfile.achievements || '';
+    if(userProfile.avatar) profileAvatar.src = userProfile.avatar;
   }
-
-  const profileFields = document.getElementById("profileFields");
-  const fieldOrder = [
-    {label: "Full Name", key: "name"},
-    {label: "Email", key: "email"},
-    {label: "Phone", key: "phone"},
-    {label: "State", key: "state"},
-    {label: "Country", key: "country"},
-    {label: "Class", key: "class"},
-    {label: "School", key: "school"},
-    {label: "Skills", key: "skills"},
-    {label: "Hobbies", key: "hobbies"},
-    {label: "Achievements", key: "achievements"}
-  ];
-
-  fieldOrder.forEach(f => {
-    if(f.key in data && data[f.key].trim() !== ""){
-      const div = document.createElement("div");
-      div.className = "profile-field";
-      div.innerHTML = `<strong>${f.label}:</strong> ${data[f.key]}`;
-      profileFields.appendChild(div);
-    }
-  });
+  renderBadges();
 }
+
+// Render badges
+function renderBadges(){
+  badgeSection.innerHTML = '';
+  if(localStorage.getItem("subscribed") === "true"){
+    allBadges.forEach(badge => {
+      if(userBadges.includes(badge.id)){
+        const badgeCard = document.createElement('div');
+        badgeCard.classList.add('badge-card');
+        badgeCard.innerHTML = `<img src="${badge.img}" alt="${badge.title}"><span>${badge.title}</span>`;
+        badgeSection.appendChild(badgeCard);
+      }
+    });
+  }
+}
+
+// Edit button toggle
+editBtn.addEventListener('click',()=>{
+  const inputs = profileForm.querySelectorAll('input,textarea');
+  inputs.forEach(i=>i.disabled = !i.disabled);
+  profileForm.querySelector('button[type="submit"]').style.display = inputs[0].disabled ? 'none' : 'block';
+});
+
+// Avatar upload
+avatarUpload.addEventListener('change', function(){
+  const file = this.files[0];
+  if(file){
+    const reader = new FileReader();
+    reader.onload = function(e){
+      profileAvatar.src = e.target.result;
+      userProfile.avatar = e.target.result;
+    }
+    reader.readAsDataURL(file);
+  }
+});
+
+// Save profile
+profileForm.addEventListener('submit',function(e){
+  e.preventDefault();
+  userProfile = {
+    name: document.getElementById('name').value,
+    email: document.getElementById('email').value,
+    phone: document.getElementById('phone').value,
+    state: document.getElementById('state').value,
+    country: document.getElementById('country').value,
+    class: document.getElementById('class').value,
+    school: document.getElementById('school').value,
+    skills: document.getElementById('skills').value,
+    hobbies: document.getElementById('hobbies').value,
+    achievements: document.getElementById('achievements').value,
+    avatar: userProfile.avatar || profileAvatar.src
+  };
+  localStorage.setItem('userProfile', JSON.stringify(userProfile));
+  alert('✅ Profile saved!');
+  renderBadges();
+});
+
+// Example: Assign a badge programmatically
+// earnBadge('creative_star');
+function earnBadge(badgeId){
+  if(!userBadges.includes(badgeId)){
+    userBadges.push(badgeId);
+    localStorage.setItem('userBadges', JSON.stringify(userBadges));
+    renderBadges();
+  }
+}
+
+// Initialize form
+populateForm();
 </script>
 
 </body>
